docs: fix: Safari sidebar ul has toolbar cut off

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -388,6 +388,7 @@ aside {
   color: var(--mobile-nav-text);
   z-index: 2;
   max-height: 100vh;
+  max-height: 100dvh;
   overflow-y: auto;
   overscroll-behavior-y: contain;
 }
@@ -1286,6 +1287,7 @@ div.code-block-caption {
     position: sticky;
     top: 1em;
     max-height: calc(100vh - 2em);
+    max-height: calc(100dvh - 2em);
     max-width: 100%;
     overflow-y: auto;
     margin: 1em;
